@@ -149,6 +149,11 @@ Other changes:
 
 * Ignore built distributions. Bugzilla Report 28997.
 
+* A new roundup attribute on <zip> and related task can be used to
+  control whether the file modification times inside the archive will
+  be rounded up or down (since zips only store modification times with
+  a granularity of two seconds).  The default remains to round up.
+  Bugzilla Report 17934.
 
 Changes from Ant 1.6.0 to Ant 1.6.1
 =============================================
